final ocl constaints on Depot metamodel

--- a/code/Development/org.mdse.pts.depot.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.depot.edit/plugin.properties
@@ -33,3 +33,5 @@ _UI_PassengerCoach_class_feature = Class
 _UI_InnerCoach_number_feature = Number
 _UI_Unknown_feature = Unspecified
 
+_UI_FirstClassPassengerCoach_type = First Class Passenger Coach
+_UI_SecondClassPassengerCoach_type = Second Class Passenger Coach
