Closing this branch

--- a/code/Development/org.mdse.pts.network.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.network.edit/plugin.properties
@@ -29,3 +29,9 @@ _UI_Leg_distance_feature = Distance
 _UI_Leg_stations_feature = Stations
 _UI_Unknown_feature = Unspecified
 
+_UI_Country_type = Country
+_UI_Region_type = Region
+_UI_Network_country_feature = Country
+_UI_Network_region_feature = Region
+_UI_Country_name_feature = Name
+_UI_Region_name_feature = Name
