add timetable metamodel, no constraints

--- a/code/Development/org.mdse.pts.schedule.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.schedule.edit/plugin.properties
@@ -19,3 +19,7 @@ _UI_Unknown_datatype= Value
 
 _UI_Unknown_feature = Unspecified
 
+_UI_NetworkReference_type = Network Reference
+_UI_Schedule_networkReference_feature = Network Reference
+_UI_Schedule_withDepot_feature = With Depot
+_UI_NetworkReference_for_feature = For
