add time metamodel, use in timetable metamodel

--- a/code/Development/org.mdse.pts.timetable.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.timetable.edit/plugin.properties
@@ -41,3 +41,8 @@ _UI_Timetable_departures_feature = Departures
 _UI_Arrival_from_feature = From
 _UI_Departure_to_feature = To
 _UI_Timetable_entries_feature = Entries
+_UI_Time_type = Time
+_UI_Entry_time_feature = Time
+_UI_Time_day_feature = Day
+_UI_Time_hour_feature = Hour
+_UI_Time_minute_feature = Minute
