--- a/code/Development/org.mdse.pts.timetable/plugin.xml
+++ b/code/Development/org.mdse.pts.timetable/plugin.xml
@@ -14,4 +14,12 @@
             genModel="model/Timetable.genmodel"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated Timetable -->
+      <package
+            uri="http://mdse.org/pts/time"
+            class="time.TimePackage"
+            genModel="model/Timetable.genmodel"/>
+   </extension>
+
 </plugin>
