--- a/code/Development/org.mdse.pts.schedule.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.schedule.edit/plugin.properties
@@ -19,3 +19,38 @@ _UI_Unknown_datatype= Value
 
 _UI_Unknown_feature = Unspecified
 
+_UI_TrainClause_type = Train Clause
+_UI_WithClause_type = With Clause
+_UI_ForClause_type = For Clause
+_UI_Date_type = Date
+_UI_Schedule_forClause_feature = For Clause
+_UI_Schedule_withClause_feature = With Clause
+_UI_Schedule_trainClause_feature = Train Clause
+_UI_TrainClause_train_feature = Train
+_UI_WithClause_depot_feature = Depot
+_UI_ForClause_network_feature = Network
+_UI_Date_day_feature = Day
+_UI_Date_hour_feature = Hour
+_UI_Date_minute_feature = Minute
+_UI_Day_Monday_literal = Monday
+_UI_Day_Tuesday_literal = Tuesday
+_UI_Day_Wednesday_literal = Wednesday
+_UI_Day_Thursday_literal = Thursday
+_UI_Day_Friday_literal = Friday
+_UI_Day_Saturday_literal = Saturday
+_UI_Day_Sunday_literal = Sunday
+_UI_DepotReference_type = Depot Reference
+_UI_NetworkReference_type = Network Reference
+_UI_TrainReference_type = Train Reference
+_UI_Schedule_networkReference_feature = Network Reference
+_UI_Schedule_depotReference_feature = Depot Reference
+_UI_Schedule_trainReference_feature = Train Reference
+_UI_DepotReference_depot_feature = Depot
+_UI_NetworkReference_network_feature = Network
+_UI_TrainReference_train_feature = Train
+_UI_Route_type = Route
+_UI_Route_date_feature = Date
+_UI_Route_start_feature = Start
+_UI_Route_terminate_feature = Terminate
+_UI_Route_drive_feature = Drive
+_UI_Route_stop_feature = Stop
