--- a/code/Development/org.mdse.pts.depot.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.depot.edit/plugin.properties
@@ -35,3 +35,4 @@ _UI_Unknown_feature = Unspecified
 
 _UI_FirstClassPassengerCoach_type = First Class Passenger Coach
 _UI_SecondClassPassengerCoach_type = Second Class Passenger Coach
+_UI_Depot_name_feature = Name
