Change stations on Leg to two separate attributes
Also make graphical editor work that it shows the object
WIP being able to edit object

--- a/code/Development/org.mdse.pts.network.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.network.edit/plugin.properties
@@ -35,3 +35,5 @@ _UI_Network_country_feature = Country
 _UI_Network_region_feature = Region
 _UI_Country_name_feature = Name
 _UI_Region_name_feature = Name
+_UI_Leg_sourceStation_feature = Source Station
+_UI_Leg_targetStation_feature = Target Station
