Schedule metamodel change - route and train redefined

--- a/code/Development/org.mdse.pts.schedule.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.schedule.edit/plugin.properties
@@ -53,3 +53,6 @@ _UI_Route_day_feature = Day
 _UI_Platform_type = Platform
 _UI_Route_platform_feature = Platform
 _UI_Platform_name_feature = Name
+_UI_StopTime_type = Stop Time
+_UI_Route_stopTime_feature = Stop Time
+_UI_Route_train_feature = Train
