-Stop +Transit +grammar

--- a/code/Development/org.mdse.pts.schedule.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.schedule.edit/plugin.properties
@@ -56,3 +56,21 @@ _UI_Platform_name_feature = Name
 _UI_StopTime_type = Stop Time
 _UI_Route_stopTime_feature = Stop Time
 _UI_Route_train_feature = Train
+_UI_STime_type = STime
+_UI_STime_day_feature = Day
+_UI_STime_hour_feature = Hour
+_UI_STime_minute_feature = Minute
+_UI_Stop_type = Stop
+_UI_Route_stops_feature = Stops
+_UI_Stop_platform_feature = Platform
+_UI_Stop_station_feature = Station
+_UI_Stop_leg_feature = Leg
+_UI_Stop_standingDuration_feature = Standing Duration
+_UI_Stop_isTerminateStop_feature = Is Terminate Stop
+_UI_Transit_type = Transit
+_UI_Route_transits_feature = Transits
+_UI_Transit_platform_feature = Platform
+_UI_Transit_station_feature = Station
+_UI_Transit_leg_feature = Leg
+_UI_Transit_standingDuration_feature = Standing Duration
+_UI_Transit_isTerminateStop_feature = Is Terminate Stop
