Grammar and constraints update

--- a/code/Development/org.mdse.pts.schedule.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.schedule.edit/plugin.properties
@@ -74,3 +74,7 @@ _UI_Transit_station_feature = Station
 _UI_Transit_leg_feature = Leg
 _UI_Transit_standingDuration_feature = Standing Duration
 _UI_Transit_isTerminateStop_feature = Is Terminate Stop
+_UI_HrMin_type = Hr Min
+_UI_STime_hrmin_feature = Hrmin
+_UI_HrMin_hour_feature = Hour
+_UI_HrMin_minute_feature = Minute
