--- a/code/Development/org.mdse.pts.schedule.editor/plugin.properties
+++ b/code/Development/org.mdse.pts.schedule.editor/plugin.properties
@@ -51,3 +51,9 @@ _UI_Wizard_initial_object_description = Select a model object to create
 _UI_FileConflict_label = File Conflict
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
 
+_UI_TimeEditor_menu = &Time Editor
+_UI_TimeModelWizard_label = Time Model
+_UI_TimeModelWizard_description = Create a new Time model
+_UI_TimeEditor_label = Time Model Editor
+_UI_TimeEditorFilenameDefaultBase = My
+_UI_TimeEditorFilenameExtensions = time
