Discard all changes not related to Schedule

--- a/code/Development/org.mdse.pts.timetable.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.timetable.edit/plugin.properties
@@ -1,6 +1,6 @@
 #
 
-pluginName = Timetable Edit Support
+pluginName = Timetable Model Edit Support
 providerName = www.example.org
 
 _UI_CreateChild_text = {0}
