--- a/code/Development/org.mdse.pts.timetable.editor/plugin.properties
+++ b/code/Development/org.mdse.pts.timetable.editor/plugin.properties
@@ -1,6 +1,6 @@
 #
 
-pluginName = Timetable Editor
+pluginName = Timetable Model Editor
 providerName = www.example.org
 
 _UI_TimetableEditor_menu = &Timetable Editor
