Remove changes to schedule

--- a/code/Development/org.mdse.pts.schedule.edit/plugin.properties
+++ b/code/Development/org.mdse.pts.schedule.edit/plugin.properties
@@ -25,26 +25,21 @@ _UI_Schedule_withDepot_feature = With Depot
 _UI_NetworkReference_for_feature = For
 _UI_DepotReference_type = Depot Reference
 _UI_Route_type = Route
-_UI_Platform_type = Platform
 _UI_TrainReference_type = Train Reference
-_UI_Time_type = Time
+_UI_Date_type = Date
 _UI_Schedule_depotReference_feature = Depot Reference
 _UI_Schedule_trainReference_feature = Train Reference
-_UI_Schedule_routeReference_feature = Route Reference
 _UI_DepotReference_depot_feature = Depot
-_UI_Route_time_feature = Time
+_UI_Route_date_feature = Date
 _UI_Route_start_feature = Start
 _UI_Route_terminate_feature = Terminate
 _UI_Route_drive_feature = Drive
 _UI_Route_stop_feature = Stop
-_UI_Route_day_feature = Day
-_UI_Route_platform_feature = Platform
-_UI_Platform_name_feature = Name
 _UI_NetworkReference_network_feature = Network
 _UI_TrainReference_train_feature = Train
-_UI_Time_day_feature = Day
-_UI_Time_hour_feature = Hour
-_UI_Time_minute_feature = Minute
+_UI_Date_day_feature = Day
+_UI_Date_hour_feature = Hour
+_UI_Date_minute_feature = Minute
 _UI_Day_Monday_literal = Monday
 _UI_Day_Tuesday_literal = Tuesday
 _UI_Day_Wednesday_literal = Wednesday
@@ -52,9 +47,19 @@ _UI_Day_Thursday_literal = Thursday
 _UI_Day_Friday_literal = Friday
 _UI_Day_Saturday_literal = Saturday
 _UI_Day_Sunday_literal = Sunday
+_UI_Route_time_feature = Time
+_UI_Schedule_routeReference_feature = Route Reference
+_UI_Route_day_feature = Day
+_UI_Platform_type = Platform
+_UI_Route_platform_feature = Platform
+_UI_Platform_name_feature = Name
 _UI_StopTime_type = Stop Time
 _UI_Route_stopTime_feature = Stop Time
 _UI_Route_train_feature = Train
+_UI_STime_type = STime
+_UI_STime_day_feature = Day
+_UI_STime_hour_feature = Hour
+_UI_STime_minute_feature = Minute
 _UI_Stop_type = Stop
 _UI_Route_stops_feature = Stops
 _UI_Stop_platform_feature = Platform
@@ -62,12 +67,8 @@ _UI_Stop_station_feature = Station
 _UI_Stop_leg_feature = Leg
 _UI_Stop_standingDuration_feature = Standing Duration
 _UI_Stop_isTerminateStop_feature = Is Terminate Stop
-_UI_STime_type = STime
 _UI_Transit_type = Transit
 _UI_Route_transits_feature = Transits
-_UI_STime_day_feature = Day
-_UI_STime_hour_feature = Hour
-_UI_STime_minute_feature = Minute
 _UI_Transit_platform_feature = Platform
 _UI_Transit_station_feature = Station
 _UI_Transit_leg_feature = Leg
